--- a/stack.css
+++ b/stack.css
@@ -10,3 +10,12 @@
   font-weight: bold;
   color: red;
 }
+
+.snazzy {
+  background: white;
+  border-radius: 2px;
+  box-sizing: border-box;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
+  padding: 2rem 1.5rem;
+  font-family: Helvetica Neue,sans;
+}
